--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,8 @@ streamlit>=1.36.0,<2.0.0
 python-dotenv>=1.0.1,<2.0.0
 rouge-score>=0.1.2,<0.2.0
 bert-score<0.4
+sentence-transformers>=2.2.0
+plotly>=5.0.0
+seaborn>=0.12.0
+scikit-learn>=1.0.0
+umap-learn>=0.5.0
