feat: Adicionar botao de parar experimento e corrigir labels do grafo de evolucao
- Implementar botao PARAR na interface do experimento (app_experimento.py)
- Corrigir labels do grafo de evolucao (remover espacos para match correto)
- Atualizar .env para usar API direta OpenAI (chaves OpenRouter com cota excedida)
- Corrigir accentuacao em portugues em visualizar_experimento.py
- Corrigir logica de sobrescrita do log.csv (evitar duplicatas)
- Adicionar UMAP 3D e melhorar visualizacoes 3D interativas
- Ajustar posicionamento da colorbar nos graficos 3D

--- a/env.template
+++ b/env.template
@@ -33,12 +33,12 @@ OPENROUTER_SITE_URL=http://localhost:8501
 OPENROUTER_SITE_TITLE=MAI-DAI-USP Metrics
 
 # ------------------------------------------------------------------------------
-# OPENAI API KEY (Opcional - apenas se usar OpenAI diretamente, nao via OpenRouter)
+# OPENAI API KEY (RECOMENDADO - use se chaves OpenRouter estiverem com cota excedida)
 # ------------------------------------------------------------------------------
 # Obtenha em: https://platform.openai.com/api-keys
-# NOTA: Diferente do OpenRouter! Use apenas se chamar OpenAI diretamente.
+# NOTA: Use modelos SEM prefixo (gpt-4o-mini, gpt-4o) quando usar API direta
 
-# OPENAI_API_KEY=sk-proj-COLE_SUA_CHAVE_OPENAI_DIRETA_AQUI
+OPENAI_API_KEY=sk-proj-COLE_SUA_CHAVE_OPENAI_DIRETA_AQUI
 
 # ------------------------------------------------------------------------------
 # CONFIGURACOES DO MODELO
