--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ rouge-score>=0.1.2,<0.2.0
 bert-score<0.4
 sentence-transformers>=2.2.0
 plotly>=5.0.0
+kaleido>=0.2.1
 seaborn>=0.12.0
 scikit-learn>=1.0.0
 umap-learn>=0.5.0
